# tree-walk-interpreter

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: lox.cpp.4E5D826628DFED4F.idx  lox.hpp.58BDF6B97A640631.idx  scanner.cpp.6E2B7973D0200332.idx  scanner.hpp.A12706CEA80E6672.idx  token.cpp.5E4A0AB2842990AD.idx  token.hpp.FAE7FA3CDC317A95.idx
include/: lox.hpp  scanner.hpp  token.hpp
src/: cli.cpp  lox.cpp  scanner.cpp  token.cpp
src/tool/AST/: GenerateAst.py
